[package]
name = "gnip-gnop"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.12.0"
wgpu_glyph = "0.10.0"
futures = "0.3.6"
shaderc = "0.6.2"
winit = "0.23"
log = "0.4.11"
env_logger = "0.8.1"
color-eyre = "0.5.6"
eyre = "0.6.1"

[dependencies.ultraviolet]
version = "0.7.4"
features = ["bytemuck"]

[dependencies.wgpu]
version = "0.6.0"
features = ["vulkan-portability", "trace", "replay"]

[dependencies.bytemuck]
version = "1.4.1"
features = ["derive"]

[build-dependencies]
eyre = "0.6.1"
fs_extra = "1.2"
glob = "0.3"

[profile.dev.package.'*']
opt-level = 3
